# cropduster

./: .gitignore  README.md  cropduster.cabal  linfit-examples.sh  msd-examples.sh
.github/workflows/: haskell.yml
app/: PlotCartpoleExamples.hs  PlotLinfitExamples.hs  PlotMSDExamples.hs
example-01-linear-fit/: pyproject.toml
example-01-linear-fit/src/: linear_fit.py
gh-site/: go.mod  hugo.toml
gh-site/content/: _index.md
gh-site/content/docs/: _index.md
gh-site/layouts/partials/custom/: head-end.html
gh-site/layouts/shortcodes/: video.html
oc-nn-haskell/: CHANGELOG.md  README.md  linfit-examples.sh  oc-nn-haskell.cabal
oc-nn-haskell/app/: Main.hs  PlotLinfitExamples.hs
oc-nn-haskell/src/: LinearFit.hs  MassSpringDamper.hs  ODE.hs
slides/: build.sh  slides.md  slides.tex
src/Duster/: CartPole.hs  FFMpeg.hs  Learning.hs  LinearFit.hs  Log.hs  Loss.hs  MassSpringDamper.hs  ODE.hs  ODEInt.hs  Ops.hs  Orphans.hs  PRNG.hs  Plot.hs
