cabal-version:      3.8
name:               cropduster
version:            0.1.0.0
synopsis:           Haskell code for Optimal Control using Neural Networks
description:        Haskell code for Optimal Control using Neural Networks
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com
copyright:          Copyright (C) Jonathan Merritt 2023
category:           Demo
extra-source-files: CHANGELOG.md

library
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-import-lists

  hs-source-dirs:  src
  exposed-modules:
    Duster.LinearFit
    Duster.Log
    Duster.MassSpringDamper
    Duster.ODE
    Duster.Orphans

  build-depends:
    , backprop             ^>=0.2.6.5
    , base                 ^>=4.17.2.0
    , bytestring           ^>=0.11.5.2
    , Chart                ^>=1.9.5
    , Chart-cairo          ^>=1.9.4.1
    , Chart-diagrams       ^>=1.9.5.1
    , colour               ^>=2.3.6
    , data-default         ^>=0.7.1.1
    , diagrams-lib         ^>=1.4.6
    , diagrams-rasterific  ^>=1.4.2.3
    , hmatrix              ^>=0.20.2
    , hmatrix-backprop     ^>=0.1.3.0
    , JuicyPixels          ^>=3.3.8
    , matplotlib           ^>=0.7.7
    , microlens            ^>=0.4.13.1
    , microlens-th         ^>=0.4.3.14
    , path                 ^>=0.9.2
    , pooled-io            ^>=0.0.2.3
    , random               ^>=1.2.1.1
    , random-shuffle       ^>=0.0.4
    , split                ^>=0.2.4
    , statistics           ^>=0.16.2.1
    , text                 ^>=2.0.2
    , vector-space         ^>=0.16

executable linfit-examples
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-import-lists -threaded -rtsopts -with-rtsopts=-N

  main-is:          PlotLinfitExamples.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , base                  ^>=4.17.2.0
    , cropduster
    , optparse-applicative  ^>=0.18.1.0
    , path                  ^>=0.9.2
    , path-io               ^>=1.8.1

executable msd-examples
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-import-lists

  main-is:          PlotMSDExamples.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , base                  ^>=4.17.2.0
    , cropduster
    , optparse-applicative  ^>=0.18.1.0
    , path                  ^>=0.9.2
    , path-io               ^>=1.8.1
