[tool.poetry]
name = "linear-fit"
version = "0.1.0"
description = "Linear Fitting with a SGD"
authors = ["Jonathan Merritt <j.s.merritt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"